add articles & plan pages

--- a/src/ui/less/Border.less
+++ b/src/ui/less/Border.less
@@ -2,6 +2,16 @@
 
 
 .bd {
+
+  &-right,
+  &-left,
+  &-top,
+  &-bottom {
+    border: none;
+    border-color: rgba(0, 0, 0, 0);
+    border-width: 0px;
+  }
+
   &-right {
     border-right: 1px solid #E2E8F0;
   }
