--- a/assets/less/frontend--style.less
+++ b/assets/less/frontend--style.less
@@ -1130,6 +1130,33 @@ section {
 	}
 }
 
+.tab-links {
+	display      : flex;
+	border-bottom: 1px solid var(--color-text-20);
+	position: relative;
+	overflow: hidden;
+
+	&__item {
+		color        : var(--color-text-60);
+		font-weight  : 400;
+		border-radius: 0;
+
+		&.tab-active {
+			color: var(--color-text);
+		}
+	}
+
+	&__plate {
+		position     : absolute;
+		bottom       : -1px;
+		background   : var(--color-primary);
+		border-radius: 8px;
+		height       : 3px;
+		width        : 100px;
+		transition: .2s ease-out;
+	}
+}
+
 // Gsap animation initial state
 [data-animation="fadeInLeft"],
 [data-animation="fadeInRight"],
