--- a/assets/less/frontend--style.less
+++ b/assets/less/frontend--style.less
@@ -241,6 +241,18 @@ section {
 	}
 }
 
+.scientists {
+	display: flex;
+	flex-direction: column;
+	&__item {
+		background-color: var(--bg1);
+		border-radius: 20px;
+	}
+	&__grid {
+		align-items: center;
+	}
+}
+
 .active-enabled {
 	display: none !important;
 }
