some shit unknown

--- a/assets/less/frontend--style.less
+++ b/assets/less/frontend--style.less
@@ -760,6 +760,9 @@ section {
 	&__content {
 		width    : 100%;
 		max-width: 580px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
 	}
 }
 
