add video count

--- a/assets/less/frontend--style.less
+++ b/assets/less/frontend--style.less
@@ -1474,3 +1474,20 @@ section {
 		}
 	}
 }
+
+.video-count {
+	display: flex;
+	align-items: center;
+	border-radius: 100px;
+	background: #E2E9ED;
+	gap: 8px;
+	padding: 6px 12px;
+	font-size: 14px;
+	margin-bottom: 8px;
+
+	.icon {
+		color: var(--color-primary);
+		font-size: 20px;
+	}
+
+}
