--- a/assets/less/frontend--style.less
+++ b/assets/less/frontend--style.less
@@ -1491,3 +1491,10 @@ section {
 	}
 
 }
+
+.footer-dev{
+	text-decoration: underline;
+	text-underline-offset: 4px;
+	margin-top: 40px;
+	display: block;
+}
