--- a/assets/less/frontend--style.less
+++ b/assets/less/frontend--style.less
@@ -1498,3 +1498,10 @@ section {
 	margin-top: 40px;
 	display: block;
 }
+
+.news-plug{
+	height: 500px;
+	background: 
+	linear-gradient(180deg, rgba(240, 246, 250, 0.9) 10.42%, rgba(241, 247, 250, 0.00) 43.81%, rgba(240, 246, 250, 0.9) 87.3%),
+	url("../img/news-plug.png") no-repeat center / cover;
+}
